correct url to slides

--- a/module1-01-intro/module1-01-intro.html
+++ b/module1-01-intro/module1-01-intro.html
@@ -13157,7 +13157,8 @@ statistician (5).</p>
 <div class="text_cell_render border-box-sizing rendered_html">
 <h2 id="Why-Jupyter-(Julia/Python/R)?">Why Jupyter (<strong>Ju</strong>lia/<strong>Pyt</strong>hon/<strong>R</strong>)?<a class="anchor-link" href="#Why-Jupyter-(Julia/Python/R)?">&#182;</a></h2><p align="center">
   <img src="./ms-employment-software.png" width="500">
-</p>
+</p><p><strong>Julia</strong>: <em>Walk Like Python; Run Like C.</em></p>
+
 </div>
 </div>
 </div>
