--- a/module2-01-GeneticVariantData/module2-01-GeneticVariantData.html
+++ b/module2-01-GeneticVariantData/module2-01-GeneticVariantData.html
@@ -3,7 +3,7 @@
 <head><meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<title>GeneticVariantData</title><script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.min.js"></script>
+<title>module2-01-GeneticVariantData</title><script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.min.js"></script>
 
 
 
@@ -15167,7 +15167,7 @@ rs142461772	22	20002207	2		[&#34;A&#34;, &#34;G&#34;]
 <div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[18]:</div>
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
      <div class="CodeMirror cm-s-jupyter">
-<div class=" highlight hl-julia"><pre><span></span><span class="n">print</span><span class="p">(</span><span class="n">PGENFiles</span><span class="o">.</span><span class="n">n_variants</span><span class="p">(</span><span class="n">p</span><span class="p">))</span> <span class="c"># consider changing it to num_...</span>
+<div class=" highlight hl-julia"><pre><span></span><span class="n">print</span><span class="p">(</span><span class="n">PGENFiles</span><span class="o">.</span><span class="n">n_variants</span><span class="p">(</span><span class="n">p</span><span class="p">))</span>
 </pre></div>
 
      </div>
@@ -15697,7 +15697,7 @@ Options in effect:
   --out test_bgen
   --vcf test_vcf.vcf.gz
 
-Start time: Sun Jul 17 16:37:54 2022
+Start time: Mon Jul 18 07:42:35 2022
 16384 MiB RAM detected; reserving 8192 MiB for main workspace.
 Using up to 8 compute threads.
 --vcf: 1356 variants scanned.
@@ -15709,7 +15709,7 @@ test_bgen-temporary.psam.
 Note: No phenotype data present.
 Writing test_bgen.bgen ... 0%done.
 Writing test_bgen.sample ... done.
-End time: Sun Jul 17 16:37:54 2022
+End time: Mon Jul 18 07:42:35 2022
 </pre>
 </div>
 </div>
@@ -15766,7 +15766,7 @@ Options in effect:
   --out test_bed
   --vcf test_vcf.vcf.gz
 
-Start time: Sun Jul 17 16:37:54 2022
+Start time: Mon Jul 18 07:42:35 2022
 16384 MiB RAM detected; reserving 8192 MiB for main workspace.
 Using up to 8 compute threads.
 --vcf: 1356 variants scanned.
@@ -15779,7 +15779,7 @@ Note: No phenotype data present.
 Writing test_bed.fam ... done.
 Writing test_bed.bim ... done.
 Writing test_bed.bed ... 0%done.
-End time: Sun Jul 17 16:37:54 2022
+End time: Mon Jul 18 07:42:35 2022
 </pre>
 </div>
 </div>
@@ -15836,7 +15836,7 @@ Options in effect:
   --out test_pgen
   --vcf test_vcf.vcf.gz
 
-Start time: Sun Jul 17 16:37:54 2022
+Start time: Mon Jul 18 07:42:35 2022
 16384 MiB RAM detected; reserving 8192 MiB for main workspace.
 Using up to 8 compute threads.
 --vcf: 1356 variants scanned.
@@ -15849,7 +15849,7 @@ Note: No phenotype data present.
 Writing test_pgen.psam ... done.
 Writing test_pgen.pvar ... 0%0%1%1%2%2%3%3%4%4%5%5%6%6%7%7%8%8%9%9%10%10%11%11%12%12%13%13%14%14%15%15%16%16%17%17%18%18%19%19%20%20%21%21%22%22%23%23%24%25%25%26%26%27%27%28%28%29%29%30%30%31%31%32%32%33%33%34%34%35%35%36%36%37%37%38%38%39%39%40%40%41%41%42%42%43%43%44%44%45%45%46%46%47%47%48%48%49%50%50%51%51%52%52%53%53%54%54%55%55%56%56%57%57%58%58%59%59%60%60%61%61%62%62%63%63%64%64%65%65%66%66%67%67%68%68%69%69%70%70%71%71%72%72%73%73%74%75%75%76%76%77%77%78%78%79%79%80%80%81%81%82%82%83%83%84%84%85%85%86%86%87%87%88%88%89%89%90%90%91%91%92%92%93%93%94%94%95%95%96%96%97%97%98%98%99%done.
 Writing test_pgen.pgen ... 0%done.
-End time: Sun Jul 17 16:37:54 2022
+End time: Mon Jul 18 07:42:35 2022
 </pre>
 </div>
 </div>
